[package]
name = "ipfs_exporter"
version = "0.5.1"
edition = "2021"
description = "A fairly naive stats exporter from Kubo IPFS to Prometheus"
authors = [ "Matt Geddes" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
env_logger = "0.11.3"
log = "0.4.21"
prometheus_exporter_base = { version = "1.4.0", features = ["hyper-rustls", "hyper_server"] }
reqwest = "0.12.2"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
